--- a/public/styles.css
+++ b/public/styles.css
@@ -162,8 +162,50 @@ form input:focus {
 	}
 }
 
-@media (max-width: 400px) {
+.table-holder {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-top: 10%;
+	width: 75%;
+	border: 1px solid black;
+	border-radius: 5px;
+	padding: 10px;
+	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+	background-color: #f1f1f1;
+}
+
+.card {
+	width: 50%;
+	margin: 10px;
+	border: 1px solid black;
+	border-radius: 5px;
+}
+
+.card-header {
+	background-color: blueviolet;
+	padding: 10px;
+}
+
+.card-body {
+	padding: 10px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 100%;
+}
+
+@media (max-width: 600px) {
 	.container {
 		width: 95%;
+	}
+
+	.table-holder {
+		width: 95%;
+	}
+
+	.card {
+		width: 100%;
 	}
 }
